--- a/51fang-java/src/main/resources/application.yml
+++ b/51fang-java/src/main/resources/application.yml
@@ -31,12 +31,12 @@ spring:
       connection-timeout: 10000
       #connection-test-query: select * from user limit 1
 
-    #username: root
-    #password: MyNewPass@123
-    #url: jdbc:mysql://localhost:3306/imkingroom?useUnicode=true&characterEncoding=utf8&characterSetResults=utf8
-    #driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:hsqldb:mem://localhost/testdb;shutdown=true
-    driver-class-name: org.hsqldb.jdbcDriver
+    username: 51fang
+    password: LtwRfBrfxpc1GOlP
+    url: jdbc:mysql://122.112.238.95:3389/51fang?tinyInt1isBit=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&useSSL=false
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    #url: jdbc:hsqldb:mem://localhost/testdb;shutdown=true
+    #driver-class-name: org.hsqldb.jdbcDriver
     #启动时需要初始化的建表语句
     schema: classpath*:db/mydb-schema.sql
     #初始化的数据
